Creating the project part
All works at this moment

--- a/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
@@ -20,7 +20,10 @@
     "description": { "default": "Personio Attendance Form description" },
     "officeFabricIconFontName": "SharePointLogo",
     "properties": {
-      "title": "Personio Attendance Form"
+      "title": "Personio Attendance Form",
+      "projects": null,
+      "timeOffTypes": null,
+      "absences": null
     },
     "cardSize": "Medium"
   }]
