--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
@@ -1,14 +1,48 @@
 {
     "type": "AdaptiveCard",
     "version": "1.3",
-    "actions": [
-        {
-            "type": "Action.Submit",
-            "id": "back",
-            "title": "Back"
-        }
-    ],
     "body": [
-
+        {
+            "type": "ColumnSet",
+            "columns": [
+                {
+                    "type": "Column",
+                    "width": "stretch",
+                    "items": [
+                        {
+                            "type": "Input.Text",
+                            "label": "Title",
+                            "id": "name"
+                        }
+                    ]
+                },
+                {
+                    "type": "Column",
+                    "width": "auto",
+                    "items": [
+                        {
+                            "type": "Input.Toggle",
+                            "label": "Activ",
+                            "id": "active"
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "type": "ActionSet",
+            "actions": [
+                {
+                    "type": "Action.Submit",
+                    "id": "createProjectButton",
+                    "title": "Create a project"
+                },
+                {
+                    "type": "Action.Submit",
+                    "id": "back",
+                    "title": "Back"
+                }
+            ]
+        }
     ]
 }
