--- a/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
@@ -20,10 +20,7 @@
     "description": { "default": "Personio Attendance Form description" },
     "officeFabricIconFontName": "SharePointLogo",
     "properties": {
-      "title": "Personio Attendance Form",
-      "projects": null,
-      "timeOffTypes": null,
-      "absences": null
+      "title": "Personio Attendance Form"
     },
     "cardSize": "Medium"
   }]
