SVG, icon, data
There is no more issue with the 29th of February, the icon of ACE has been changed and SVG is now possible.

--- a/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
@@ -16,9 +16,9 @@
   "preconfiguredEntries": [{
     "groupId": "bd067b1e-3ad5-4d5d-a5fe-505f07d7f59c", // Dashboard
     "group": { "default": "Dashboard" },
-    "title": { "default": "Personio Attendance Form" },
-    "description": { "default": "Personio Attendance Form description" },
-    "officeFabricIconFontName": "SharePointLogo",
+    "title": { "default": "Personio" },
+    "description": { "default": "Enable your employees to manage their attendances, absences and projects in one place" },
+    "officeFabricIconFontName": "PageHeaderEdit",
     "properties": {
       "title": "Personio Attendance Form"
     },
