--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@microsoft/sp-core-library": "1.16.1",
     "@microsoft/sp-http": "^1.16.1",
     "@microsoft/sp-property-pane": "1.16.1",
+    "mini-svg-data-uri": "^1.4.4",
     "tslib": "2.3.1"
   },
   "devDependencies": {
