--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
@@ -30,7 +30,7 @@
                 },
                 {
                     "type": "Action.Submit",
-                    "id": "back",
+                    "id": "projectMenuButton",
                     "title": "Back"
                 }
             ]
