--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_overview.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_overview.json
@@ -1,64 +1,6 @@
 {
     "type": "AdaptiveCard",
     "version": "1.3",
-    "actions": [
-        {
-            "type": "Action.ShowCard",
-            "title": "Finish project",
-            "card": {
-              "type": "AdaptiveCard",
-              "body": [
-                {
-                  "type": "ColumnSet",
-                  "columns": [
-                    {
-                      "type": "Column",
-                      "verticalContentAlignment": "Center",
-                      "items": [
-                        {
-                          "type": "TextBlock",
-                          "text": "Choose the project"
-                        }
-                      ]
-                    },
-                    {
-                      "type": "Column",
-                      "items": [
-                        {
-                          "type": "Input.ChoiceSet",
-                          "id": "id",
-                          "choices": [
-                            {
-                              "$when": "${active == true}",
-                              "$data": "${projects}",
-                              "title": "${name}",
-                              "value": "${id}"
-                            }
-                          ]
-                        }
-                      ]
-                    }
-                  ]
-                },
-                {
-                  "type": "ActionSet",
-                  "actions": [
-                    {
-                      "type": "Action.Submit",
-                      "id": "metaProjectButton",
-                      "title": "Meta"
-                    }
-                  ]
-                }
-              ]
-            }
-        },
-        {
-            "type": "Action.Submit",
-            "id": "back",
-            "title": "Back"
-        }
-    ],
     "body": [
         {
             "type": "Container",
@@ -73,6 +15,67 @@
                     "horizontalAlignment": "center"
                 }
             ]
+        },
+        {
+          "type": "ActionSet",
+          "actions": [
+            {
+                "type": "Action.ShowCard",
+                "title": "Finish project",
+                "card": {
+                  "type": "AdaptiveCard",
+                  "body": [
+                    {
+                      "type": "ColumnSet",
+                      "columns": [
+                        {
+                          "type": "Column",
+                          "verticalContentAlignment": "Center",
+                          "items": [
+                            {
+                              "type": "TextBlock",
+                              "text": "Choose the project"
+                            }
+                          ]
+                        },
+                        {
+                          "type": "Column",
+                          "items": [
+                            {
+                              "type": "Input.ChoiceSet",
+                              "id": "id",
+                              "choices": [
+                                {
+                                  "$when": "${active == true}",
+                                  "$data": "${projects}",
+                                  "title": "${name}",
+                                  "value": "${id}"
+                                }
+                              ]
+                            }
+                          ]
+                        }
+                      ]
+                    },
+                    {
+                      "type": "ActionSet",
+                      "actions": [
+                        {
+                          "type": "Action.Submit",
+                          "id": "metaProjectButton",
+                          "title": "Confirm"
+                        }
+                      ]
+                    }
+                  ]
+                }
+            },
+            {
+                "type": "Action.Submit",
+                "id": "projectMenuButton",
+                "title": "Back"
+            }
+          ]    
         }
     ]
 }
