--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_menu.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_menu.json
@@ -1,17 +1,57 @@
 {
     "type": "AdaptiveCard",
     "version": "1.3",
+    "body": [
+        {
+            "type": "Container",
+            "style": "emphasis",
+            "items": [
+                {
+                    "type": "TextBlock",
+                    "text": "Project",
+                    "horizontalAlignment": "center",
+                    "weight": "bolder",
+                    "size": "medium"
+                }
+            ]
+        },
+        {
+            "type": "ColumnSet",
+            "columns": [
+                {
+                    "type": "Column",
+                    "items": [
+                        {
+                            "type": "ActionSet",
+                            "actions": [
+                                {
+                                    "type": "Action.Submit",
+                                    "id": "projectFormMenuButton",
+                                    "title": "Form"
+                                }
+                            ]
+                        }
+                    ]
+                },
+                {
+                    "type": "Column",
+                    "items": [
+                        {
+                            "type": "ActionSet",
+                            "actions": [
+                                {
+                                    "type": "Action.Submit",
+                                    "id": "projectOverviewMenuButton",
+                                    "title": "Overview"
+                                }
+                            ]
+                        }
+                    ]
+                }
+            ]
+        }
+    ],
     "actions": [
-        {
-            "type": "Action.Submit",
-            "id": "projectFormMenuButton",
-            "title": "Project form"
-        },
-        {
-            "type": "Action.Submit",
-            "id": "projectOverviewMenuButton",
-            "title": "Projects' overview"
-        },
         {
             "type": "Action.Submit",
             "id": "back",
