--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_overview.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_overview.json
@@ -2,6 +2,20 @@
     "type": "AdaptiveCard",
     "version": "1.3",
     "body": [
+      {
+        "type": "Container",
+        "style": "emphasis",
+        "height": "auto",
+        "items": [
+            {
+                "type": "TextBlock",
+                "text": "Project overview",
+                "horizontalAlignment": "center",
+                "weight": "bolder",
+                "height": "auto"
+            }
+        ]
+      },
         {
             "type": "Container",
             "$data": "${projects}",
@@ -17,65 +31,89 @@
             ]
         },
         {
-          "type": "ActionSet",
-          "actions": [
-            {
-                "type": "Action.ShowCard",
-                "title": "Finish project",
-                "card": {
-                  "type": "AdaptiveCard",
-                  "body": [
-                    {
-                      "type": "ColumnSet",
-                      "columns": [
+            "type": "ColumnSet",
+            "columns": [
+                {
+                    "type": "Column",
+                    "items": [
                         {
-                          "type": "Column",
-                          "verticalContentAlignment": "Center",
-                          "items": [
-                            {
-                              "type": "TextBlock",
-                              "text": "Choose the project"
-                            }
-                          ]
-                        },
-                        {
-                          "type": "Column",
-                          "items": [
-                            {
-                              "type": "Input.ChoiceSet",
-                              "id": "id",
-                              "choices": [
-                                {
-                                  "$when": "${active == true}",
-                                  "$data": "${projects}",
-                                  "title": "${name}",
-                                  "value": "${id}"
+                            "type": "ActionSet",
+                            "actions": [
+                              {
+                                "type": "Action.ShowCard",
+                                "title": "Finish project",
+                                "style": "destructive",
+                                "card": {
+                                  "type": "AdaptiveCard",
+                                  "body": [
+                                    {
+                                      "type": "ColumnSet",
+                                      "columns": [
+                                        {
+                                          "type": "Column",
+                                          "width": "auto",
+                                          "verticalContentAlignment": "Center",
+                                          "items": [
+                                            {
+                                              "type": "TextBlock",
+                                              "text": "Choose the project"
+                                            }
+                                          ]
+                                        },
+                                        {
+                                          "type": "Column",
+                                          "items": [
+                                            {
+                                              "type": "Input.ChoiceSet",
+                                              "id": "id",
+                                              "choices": [
+                                                {
+                                                  "$when": "${active == true}",
+                                                  "$data": "${projects}",
+                                                  "title": "${name}",
+                                                  "value": "${id}"
+                                                }
+                                              ]
+                                            }
+                                          ]
+                                        }
+                                      ]
+                                    },
+                                    {
+                                      "type": "ActionSet",
+                                      "actions": [
+                                        {
+                                          "type": "Action.Submit",
+                                          "id": "metaProjectButton",
+                                          "title": "Confirm",
+                                          "style": "destructive"
+                                        }
+                                      ]
+                                    }
+                                  ]
                                 }
-                              ]
-                            }
-                          ]
+                              }
+                            ]
                         }
-                      ]
-                    },
-                    {
-                      "type": "ActionSet",
-                      "actions": [
+                    ]
+                },
+                {
+                    "type": "Column",
+                    "width": "auto",
+                    "items": [
                         {
-                          "type": "Action.Submit",
-                          "id": "metaProjectButton",
-                          "title": "Confirm"
+                            "type": "ActionSet",
+                            "actions": [
+                                {
+                                      "type": "Action.Submit",
+                                      "id": "projectMenuButton",
+                                      "title": "Back"
+                                }
+                            ]
                         }
-                      ]
-                    }
-                  ]
+                    ]
                 }
-            },
-            {
-                "type": "Action.Submit",
-                "id": "projectMenuButton",
-                "title": "Back"
-            }
-          ]    
+            ]
         }
     ]
 }
