--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/project_form.json
@@ -67,7 +67,7 @@
                             "actions": [
                                 {
                                       "type": "Action.Submit",
-                                      "id": "projectMenuButton",
+                                      "id": "projectsMenuButton",
                                       "title": "Back"
                                 }
                             ]
