Allowed property pane changes

--- a/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/PersonioAttendanceFormAdaptiveCardExtension.manifest.json
@@ -23,6 +23,11 @@
     },
     "officeFabricIconFontName": "PageHeaderEdit",
     "properties": {
+      "quickViewButton": null,
+      "cardViewContent": null,
+      "attendance": true,
+      "absence": true,
+      "projects": true
     },
     "cardSize": "Medium"
   }]
