--- a/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/projects_menu.json
+++ b/src/adaptiveCardExtensions/personioAttendanceForm/quickView/template/projects_menu.json
@@ -56,7 +56,7 @@
     "actions": [
         {
             "type": "Action.Submit",
-            "id": "back",
+            "id": "menu",
             "title": "${strings.Projects.Menu.Buttons.Back}"
         }
     ]
